[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-researcher"
version = "0.1.0"
description = "An AI researcher using LangGraph and Streamlit"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.6.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=0.0.1",
    "streamlit>=1.28.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "colorama==0.4.6",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "pandas==2.3.3",
    "proto-plus==1.26.1",
    "requests-toolbelt==1.0.0",
    "tenacity==9.1.2",
    "python-dotenv>=1.0.0",
    "arxiv>=1.4.8",
    "pypdf>=3.8.0",
    "pypdf2>=3.0.1",
    "pdflatex>=0.1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["ai_researcher"]
